# Aya

./: .gitignore  LICENSE  README copy.md  README.md  aya_cli.py  aya_gui.py  aya_gui_old.py  aya_local.py  aya_local_gui.py  example_custom_tools.py  function_registry.py  gemini_tools.py  live_loop.py  package-lock.json  package.json  requirements.txt  stream.js  utils.py
python/: LICENSE  MANIFEST.in  README.md  pyproject.toml
python/src/aya/: __init__.py  cli.py  function_registry.py  gemini_tools.py  gui.py  live_loop.py  tauri_bridge.py  utils.py  websocket_server.py  websocket_test_client.py
python/src/aya/custom_tools/: __init__.py  example.py
python/src/aya/examples/: __init__.py  custom_tools.py  try_liveapi.py
python/src/aya/resources/system_prompts/default/: aya_default_tools.txt  aya_default_tools_cli.txt  aya_default_tools_tauri.txt  sales_assistant.txt  slides_improvement_assistant.txt
python/tests/: __init__.py  test_gemini_tools.py  test_utils.py
system_prompts/default/: aya_default.txt  aya_default_gui.txt  aya_default_tools.txt  buyer_assistant.txt  daily_scrum_assistant.txt  ui_improvement_assistant.txt
tauri/: README.md  package-lock.json  package.json  todo-fix-tauri.txt
tauri/public/: index.html
tauri/scripts/: package.ps1  package.sh
tauri/src/: App.tsx  types.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
tauri/src/components/: ChatBox.tsx  SettingsPanel.tsx  StatusDisplay.tsx  VoiceControls.tsx
tauri/src/hooks/: useVoiceAgent.ts  useWebSocket.ts
tauri/src/store/: settingsStore.ts
tauri/src/styles/: App.css  ChatBox.css  SettingsPanel.css  StatusDisplay.css  VoiceControls.css  index.css
